--- a/package.json
+++ b/package.json
@@ -4,34 +4,49 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "concurrently \"npm run watch:server\" \"vite\"",
+    "build": "npm run build:server && tsc -b && vite build",
+    "build:server": "tsc -b tsconfig.server.json",
     "lint": "eslint .",
     "preview": "vite preview",
-    "watch": "tsc -b && vite build --watch"
+    "watch": "concurrently \"npm run watch:server\" \"tsc -b --watch\" \"vite build --watch\"",
+    "watch:server": "tsc -b tsconfig.server.json --watch",
+    "start:server": "node dist/mcp-server.js",
+    "test:search": "tsx test-semantic-search.ts"
+  },
+  "bin": {
+    "hf-mcp-server": "./dist/mcp-server.js"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.11.0",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-label": "^2.1.4",
     "@tailwindcss/vite": "^4.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "express": "^4.18.3",
     "lucide-react": "^0.507.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.5",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@types/node": "^22.15.3",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.15.12",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
+    "concurrently": "^9.1.2",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "install": "^0.13.0",
+    "npm": "^11.3.0",
+    "tsx": "^4.19.4",
     "tw-animate-css": "^1.2.9",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
