--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-label": "^2.1.4",
     "@tailwindcss/vite": "^4.1.5",
+    "@types/minimist": "^1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "express": "^4.18.3",
     "lucide-react": "^0.507.0",
+    "minimist": "^1.2.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.2.0",
