--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run watch:server\" \"vite\"",
+    "dev": "tsc -b tsconfig.server.json && cross-env NODE_ENV=development node dist/sse.js",
+    "dev:stdio": "tsc -b tsconfig.server.json && cross-env NODE_ENV=development node dist/stdio.js",
+    "dev:http": "tsc -b tsconfig.server.json && cross-env NODE_ENV=development node dist/streamableHttp.js",
+    "dev:watch": "concurrently \"npm run watch:server\" \"cross-env NODE_ENV=development node dist/sse.js\"",
     "build": "npm run build:server && tsc -b && vite build",
     "build:server": "tsc -b tsconfig.server.json",
     "lint": "eslint .",
@@ -47,6 +50,7 @@
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
