--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "watch": "concurrently \"npm run watch:server\" \"tsc -b --watch\" \"vite build --watch\"",
     "watch:server": "tsc -b tsconfig.server.json --watch",
     "start:server": "node dist/mcp-server.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
     "test:search": "tsx test-semantic-search.ts",
     "docker:build": "docker build -t hf-mcp-server .",
     "docker:run": "docker run -p 3000:3000 -e HF_TOKEN=${HF_TOKEN} hf-mcp-server",
@@ -56,11 +59,14 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "install": "^0.13.0",
+    "jsdom": "^26.1.0",
     "npm": "^11.3.0",
     "tsx": "^4.19.4",
     "tw-animate-css": "^1.2.9",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
-  }
+    "vite": "^6.3.5",
+    "vitest": "^3.1.3"
+  },
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
