--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
 # Logs
 logs
 *.log
+
+
+pnpm-debug.log*
+lerna-debug.log*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
 node_modules
-dist
+dist/
+.vite/
 dist-ssr
 *.local
 
