--- a/package.json
+++ b/package.json
@@ -3,70 +3,19 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
   "scripts": {
-    "dev": "tsc -b tsconfig.server.json && cross-env NODE_ENV=development node dist/streamableHttp.js",
-    "dev:stdio": "tsc -b tsconfig.server.json && cross-env NODE_ENV=development node dist/stdio.js",
-    "dev:http": "tsc -b tsconfig.server.json && cross-env NODE_ENV=development node dist/streamableHttp.js",
-    "dev:watch": "concurrently \"npm run watch:server\" \"cross-env NODE_ENV=development node dist/streamableHttp.js\"",
-    "build": "npm run build:server && tsc -b && vite build",
-    "build:server": "tsc -b tsconfig.server.json",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "watch": "concurrently \"npm run watch:server\" \"tsc -b --watch\" \"vite build --watch\"",
-    "watch:server": "tsc -b tsconfig.server.json --watch",
-    "start:server": "node dist/mcp-server.js",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:ui": "vitest --ui",
-    "test:search": "tsx test-semantic-search.ts",
-    "docker:build": "docker build -t hf-mcp-server .",
-    "docker:run": "docker run -p 3000:3000 -e HF_TOKEN=${HF_TOKEN} hf-mcp-server",
-    "docker:run:sse": "docker run -p 3000:3000 -e TRANSPORT_TYPE=sse -e HF_TOKEN=${HF_TOKEN} hf-mcp-server",
-    "docker:run:stdio": "docker run -p 3000:3000 -e TRANSPORT_TYPE=stdio -e HF_TOKEN=${HF_TOKEN} hf-mcp-server",
-    "docker:run:streamableHttp": "docker run -p 3000:3000 -e TRANSPORT_TYPE=streamableHttp -e HF_TOKEN=${HF_TOKEN} hf-mcp-server"
-  },
-  "bin": {
-    "hf-mcp-server": "./dist/mcp-server.js"
-  },
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.11.2",
-    "@radix-ui/react-checkbox": "^1.2.3",
-    "@radix-ui/react-label": "^2.1.4",
-    "@tailwindcss/vite": "^4.1.5",
-    "@types/minimist": "^1.2.5",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "express": "^4.18.3",
-    "lucide-react": "^0.507.0",
-    "minimist": "^1.2.8",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.5",
-    "zod": "^3.24.4"
+    "build": "pnpm run --recursive build",
+    "dev": "pnpm run --filter='@hf-mcp/app' dev",
+    "dev:watch": "pnpm run --filter='@hf-mcp/app' dev:watch",
+    "start": "pnpm run ./packages/app/dist/src/server/streamableHttp.js",
+    "test": "pnpm run --recursive test",
+    "lint": "pnpm run --recursive lint",
+    "clean": "pnpm run --recursive clean"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/express": "^4.17.21",
-    "@types/node": "^22.15.12",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "concurrently": "^9.1.2",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "install": "^0.13.0",
-    "jsdom": "^26.1.0",
-    "npm": "^11.3.0",
-    "tsx": "^4.19.4",
-    "tw-animate-css": "^1.2.9",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
-    "vitest": "^3.1.3"
-  },
-  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
+    "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3"
+  }
 }
