--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "files": [],
   "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" },
-    { "path": "./tsconfig.server.json" }
+    { "path": "./packages/mcp" },
+    { "path": "./packages/app/tsconfig.web.json" },
+    { "path": "./packages/app/tsconfig.server.json" },
+
   ],
   "compilerOptions": {
     "baseUrl": ".",
