--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,13 +9,13 @@
     "build": "pnpm run build:server && pnpm run build:web",
     "build:server": "tsc -p tsconfig.server.json",
     "build:web": "vite build",
-    "dev": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/streamable-http.js",
+    "dev": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/streamableHttp.js",
     "dev:stdio": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/stdio.js",
     "dev:sse": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/sse.js",
-    "dev:watch": "concurrently \"tsc -p tsconfig.server.json --watch\" \"vite build --watch\" \"nodemon dist/server/streamable-http.js\"",
-    "start": "NODE_ENV=production node dist/server/streamable-http.js",
-    "start:stdio": "NODE_ENV=production node dist/server/stdio.js",
-    "start:sse": "NODE_ENV=production node dist/server/sse.js",
+    "dev:watch": "concurrently \"tsc -p tsconfig.server.json --watch\" \"vite build --watch\" \"nodemon dist/server/streamableHttp.js\"",
+    "start": "cross-env NODE_ENV=production node dist/server/streamableHttp.js",
+    "start:stdio": "cross-env NODE_ENV=production node dist/server/stdio.js",
+    "start:sse": "cross-env NODE_ENV=production node dist/server/sse.js",
     "test": "vitest run",
     "lint": "eslint .",
     "clean": "rimraf dist",
