--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "hf-mcp-server",
+  "name": "hf-mcp",
   "private": true,
   "version": "0.0.1",
   "type": "module",
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
   "scripts": {
     "build": "pnpm run --recursive build",
-    "dev": "pnpm run --filter='@hf-mcp/app' dev",
-    "dev:watch": "pnpm run --filter='@hf-mcp/app' dev:watch",
-    "start": "pnpm run ./packages/app/dist/src/server/streamableHttp.js",
+    "dev": "pnpm run --filter=@hf-mcp/app dev",
+    "dev:watch": "pnpm run --filter=@hf-mcp/app dev:watch",
+    "start": "pnpm run build && cd packages/app && pnpm start",
     "test": "pnpm run --recursive test",
     "lint": "pnpm run --recursive lint",
     "clean": "pnpm run --recursive clean"
