build and docker improvements

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,14 @@
+
+# Dependencies
 node_modules
+**/node_modules
+packages/*/node_modules
+
+# Build outputs  
 dist
+**/dist
+packages/*/dist
+
 npm-debug.log
 .git
 .gitignore
