--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,8 +12,10 @@
     "dev": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/streamableHttp.js",
     "dev:stdio": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/stdio.js",
     "dev:sse": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/sse.js",
+    "dev:json": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/streamableHttp.js --json",
     "dev:watch": "concurrently \"tsc -p tsconfig.server.json --watch\" \"vite build --watch\" \"nodemon dist/server/streamableHttp.js\"",
     "start": "cross-env NODE_ENV=production node dist/server/streamableHttp.js",
+    "start:json": "cross-env NODE_ENV=production node dist/server/streamableHttp.js --json",
     "start:stdio": "cross-env NODE_ENV=production node dist/server/stdio.js",
     "start:sse": "cross-env NODE_ENV=production node dist/server/sse.js",
     "test": "vitest run",
