--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -13,7 +13,9 @@
   "scripts": {
     "build": "tsc",
     "test": "vitest run",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint ."
   },
   "dependencies": {
     "zod": "^3.24.4"
