--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -19,11 +19,9 @@
   },
   "dependencies": {
     "@huggingface/hub": "^2.1.0",
-    "node-fetch": "^3.3.2",
     "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@types/node": "^22.15.18",
-    "@types/node-fetch": "^2.6.12"
+    "@types/node": "^22.15.18"
   }
 }
