--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -22,6 +22,7 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@types/node": "^22.15.18"
+    "@types/node": "^22.15.18",
+    "vitest": "^3.1.3"
   }
 }
