build source updates

--- a/packages/app/tsconfig.web.json
+++ b/packages/app/tsconfig.web.json
@@ -17,9 +17,9 @@
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    "baseUrl": ".",
+    "baseUrl": "src",
     "paths": {
-      "@/*": ["./src/web/*"]
+      "@/*": ["./web/*"]
     }
   },
   "include": ["src/web/**/*"],
