--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
   "references": [
     { "path": "./packages/mcp" },
     { "path": "./packages/app/tsconfig.web.json" },
-    { "path": "./packages/app/tsconfig.server.json" },
-
+    { "path": "./packages/app/tsconfig.server.json" }
   ],
   "compilerOptions": {
     "baseUrl": ".",
