--- a/packages/app/tsconfig.server.json
+++ b/packages/app/tsconfig.server.json
@@ -21,7 +21,9 @@
       "es2022",
       "dom",
       "dom.iterable"
-    ]
+    ],
+    "rootDir": "src",
+    "baseUrl": "src"
   },
   "include": [
     "src/server/**/*.ts",
