--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
   "scripts": {
-    "build": "pnpm run --recursive build",
+    "build": "pnpm run --filter=@hf-mcp/mcp build && pnpm run --filter=@hf-mcp/app build",
     "dev": "pnpm run --filter=@hf-mcp/app dev",
     "dev:watch": "pnpm run --filter=@hf-mcp/app dev:watch",
     "start": "pnpm run build && cd packages/app && pnpm start",
