--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,62 +1,62 @@
 {
-  "name": "@hf-mcp/app",
-  "version": "1.0.0",
-  "type": "module",
-  "bin": {
-    "hf-mcp-server": "./dist/server/streamableHttp.js"
-  },
-  "scripts": {
-    "build": "pnpm run build:server && pnpm run build:web",
-    "build:server": "tsc -p tsconfig.server.json",
-    "build:web": "vite build",
-    "dev": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/streamableHttp.js",
-    "dev:stdio": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/stdio.js",
-    "dev:sse": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/sse.js",
-    "dev:json": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/streamableHttp.js --json",
-    "dev:watch": "concurrently \"tsc -p tsconfig.server.json --watch\" \"vite build --watch\" \"nodemon dist/server/streamableHttp.js\"",
-    "start": "cross-env NODE_ENV=production node dist/server/streamableHttp.js",
-    "start:json": "cross-env NODE_ENV=production node dist/server/streamableHttp.js --json",
-    "start:stdio": "cross-env NODE_ENV=production node dist/server/stdio.js",
-    "start:sse": "cross-env NODE_ENV=production node dist/server/sse.js",
-    "test": "vitest run",
-    "lint": "eslint .",
-    "clean": "rimraf dist",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@hf-mcp/mcp": "workspace:*",
-    "@modelcontextprotocol/sdk": "^1.11.2",
-    "@radix-ui/react-checkbox": "^1.2.3",
-    "@radix-ui/react-label": "^2.1.4",
-    "@tailwindcss/vite": "^4.1.5",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "express": "^4.18.3",
-    "lucide-react": "^0.507.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.5",
-    "zod": "^3.24.4"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/express": "^4.17.21",
-    "@types/node": "^22.15.12",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "concurrently": "^9.1.2",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "nodemon": "^3.1.7",
-    "rimraf": "^5.0.10",
-    "tsx": "^4.19.4",
-    "typescript": "*",
-    "vite": "^6.3.5",
-    "vitest": "^3.1.3"
-  }
+	"name": "@hf-mcp/app",
+	"version": "1.0.0",
+	"type": "module",
+	"bin": {
+		"hf-mcp-server": "./dist/streamableHttp.js"
+	},
+	"scripts": {
+		"build": "pnpm run build:server && pnpm run build:web",
+		"build:server": "tsc -p tsconfig.server.json",
+		"build:web": "vite build",
+		"dev": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/streamableHttp.js",
+		"dev:stdio": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/stdio.js",
+		"dev:sse": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/sse.js",
+		"dev:json": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/streamableHttp.js --json",
+		"dev:watch": "concurrently \"tsc -p tsconfig.server.json --watch\" \"vite build --watch\" \"nodemon dist/server/streamableHttp.js\"",
+		"start": "cross-env NODE_ENV=production node dist/server/streamableHttp.js",
+		"start:json": "cross-env NODE_ENV=production node dist/server/streamableHttp.js --json",
+		"start:stdio": "cross-env NODE_ENV=production node dist/server/stdio.js",
+		"start:sse": "cross-env NODE_ENV=production node dist/server/sse.js",
+		"test": "vitest run",
+		"lint": "eslint .",
+		"clean": "rimraf dist",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@hf-mcp/mcp": "workspace:*",
+		"@modelcontextprotocol/sdk": "^1.11.2",
+		"@radix-ui/react-checkbox": "^1.2.3",
+		"@radix-ui/react-label": "^2.1.4",
+		"@tailwindcss/vite": "^4.1.5",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"express": "^4.18.3",
+		"lucide-react": "^0.507.0",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"tailwind-merge": "^3.2.0",
+		"tailwindcss": "^4.1.5",
+		"zod": "^3.24.4"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.25.0",
+		"@types/express": "^4.17.21",
+		"@types/node": "^22.15.12",
+		"@types/react": "^19.1.2",
+		"@types/react-dom": "^19.1.2",
+		"@vitejs/plugin-react-swc": "^3.9.0",
+		"concurrently": "^9.1.2",
+		"cross-env": "^7.0.3",
+		"eslint": "^9.25.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.19",
+		"globals": "^16.0.0",
+		"nodemon": "^3.1.7",
+		"rimraf": "^5.0.10",
+		"tsx": "^4.19.4",
+		"typescript": "*",
+		"vite": "^6.3.5",
+		"vitest": "^3.1.3"
+	}
 }
