--- a/packages/app/tsconfig.server.json
+++ b/packages/app/tsconfig.server.json
@@ -22,7 +22,7 @@
       "dom",
       "dom.iterable"
     ],
-    "rootDir": "src",
+    "rootDir": "src"
   },
   "include": [
     "src/server/**/*.ts",
