--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,14 @@ dist/
 dist-ssr
 *.local
 
+# TypeScript
+*.tsbuildinfo
+.tsc-cache/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
 .idea
 .DS_Store
 *.suo
