--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"type": "module",
 	"bin": {
-		"hf-mcp-server": "./dist/streamableHttp.js"
+		"hf-mcp-server": "./dist/server/streamableHttp.js"
 	},
 	"scripts": {
 		"build": "pnpm run build:server && pnpm run build:web",
