--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -56,6 +56,7 @@
 		"rimraf": "^5.0.10",
 		"tsx": "^4.19.4",
 		"typescript": "*",
+		"typescript-eslint": "^8.32.1",
 		"vite": "^6.3.5",
 		"vitest": "^3.1.3"
 	}
