--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -15,14 +15,18 @@
     "test": "vitest run",
     "dev": "tsc --watch",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint 'src/**/*.ts'"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@huggingface/hub": "^2.1.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.0",
     "@types/node": "^22.15.18",
+    "eslint": "^9.25.0",
+    "globals": "^16.0.0",
+    "typescript-eslint": "^8.32.1",
     "vitest": "^3.1.3"
   }
 }
