--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -18,7 +18,7 @@
 		"start:json": "cross-env NODE_ENV=production node dist/server/streamableHttp.js --json",
 		"start:stdio": "cross-env NODE_ENV=production node dist/server/stdio.js",
 		"start:sse": "cross-env NODE_ENV=production node dist/server/sse.js",
-		"test": "vitest run",
+		"test": "echo 'no tests for package yet'",
 		"lint": "eslint .",
 		"clean": "rimraf dist",
 		"preview": "vite preview"
