--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
 	"type": "module",
 	"packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
 	"scripts": {
-		"build": "pnpm run --filter=@hf-mcp/mcp build && pnpm run --filter=@hf-mcp/app build",
-		"dev": "pnpm run --filter=@hf-mcp/app dev",
-		"dev:watch": "pnpm run --filter=@hf-mcp/app dev:watch",
-		"start": "pnpm run build && cd packages/app && pnpm start",
-		"test": "pnpm run --recursive test",
-		"lint": "pnpm run --recursive lint",
-		"clean": "pnpm run --recursive clean",
-		"rebuild": "pnpm run clean && pnpm run build"
+		"dev": "concurrently \"pnpm run --filter=mcp dev\" \"pnpm run --filter=app dev\"",
+		"start": "cd packages/app && pnpm start",
+		"test": "pnpm run -r test",
+		"lint": "pnpm run -r lint",
+		"build": "pnpm -r build",
+		"clean": "pnpm run -r clean",
+		"buildrun": "pnpm run clean && pnpm run build && pnpm run start"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.27.0",
