--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -33,6 +33,7 @@
 		"clsx": "^2.1.1",
 		"express": "^4.18.3",
 		"lucide-react": "^0.507.0",
+		"pino": "^9.7.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"tailwind-merge": "^3.2.0",
