--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -34,6 +34,7 @@
 		"express": "^4.18.3",
 		"lucide-react": "^0.507.0",
 		"pino": "^9.7.0",
+		"pino-pretty": "^13.0.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"tailwind-merge": "^3.2.0",
