--- a/packages/app/tsconfig.server.json
+++ b/packages/app/tsconfig.server.json
@@ -1,34 +1,26 @@
 {
-  "compilerOptions": {
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "target": "es2022",
-    "allowJs": true,
-    "resolveJsonModule": true,
-    "moduleDetection": "force",
-    "isolatedModules": true,
-    "verbatimModuleSyntax": true,
-    "strict": true,
-    "noUncheckedIndexedAccess": true,
-    "noImplicitOverride": true,
-    "module": "NodeNext",
-    "outDir": "dist",
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "lib": [
-      "es2022",
-      "dom",
-      "dom.iterable"
-    ],
-    "rootDir": "src"
-  },
-  "include": [
-    "src/server/**/*.ts",
-    "src/shared/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+	"compilerOptions": {
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
+		"target": "es2022",
+		"esModuleInterop": true,
+		"skipLibCheck": true,
+		"allowJs": true,
+		"resolveJsonModule": true,
+		"moduleDetection": "force",
+		"isolatedModules": true,
+		"verbatimModuleSyntax": true,
+		"strict": true,
+		"noUncheckedIndexedAccess": true,
+		"noImplicitOverride": true,
+		"outDir": "dist",
+		"declaration": true,
+		"declarationMap": true,
+		"removeComments": true,
+		"sourceMap": true,
+		"lib": ["es2022", "dom", "dom.iterable"],
+		"rootDir": "src"
+	},
+	"include": ["src/server/**/*.ts", "src/shared/**/*.ts"],
+	"exclude": ["node_modules", "dist"]
 }
