interim commit pre auth checking

--- a/packages/app/tsconfig.server.json
+++ b/packages/app/tsconfig.server.json
@@ -13,6 +13,10 @@
 		"strict": true,
 		"noUncheckedIndexedAccess": true,
 		"noImplicitOverride": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noFallthroughCasesInSwitch": true,
+		"useDefineForClassFields": true,
 		"outDir": "dist",
 		"declaration": true,
 		"declarationMap": true,
