--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 	"packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
 	"scripts": {
 		"dev": "concurrently \"pnpm run --filter=mcp dev\" \"pnpm run --filter=app dev\"",
+		"dev:json": "concurrently \"pnpm run --filter=mcp dev\" \"pnpm run --filter=app dev:json\"",
+		"dev:stdio": "concurrently \"pnpm run --filter=mcp dev\" \"pnpm run --filter=app dev:stdio\"",
 		"start": "cd packages/app && pnpm start",
 		"test": "pnpm run -r test",
 		"lint": "pnpm run -r lint",
