--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -38,6 +38,7 @@
 		"pino-pretty": "^13.0.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"swr": "^2.3.3",
 		"tailwind-merge": "^3.2.0",
 		"tailwindcss": "^4.1.5",
 		"zod": "^3.24.4"
