--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -29,6 +29,7 @@
 		"@modelcontextprotocol/sdk": "^1.11.2",
 		"@radix-ui/react-checkbox": "^1.2.3",
 		"@radix-ui/react-label": "^2.1.4",
+		"@radix-ui/react-tabs": "^1.1.12",
 		"@tailwindcss/vite": "^4.1.5",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
