--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -29,7 +29,10 @@
 		"@modelcontextprotocol/sdk": "^1.11.2",
 		"@radix-ui/react-checkbox": "^1.2.3",
 		"@radix-ui/react-label": "^2.1.4",
+		"@radix-ui/react-separator": "^1.1.7",
+		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-tabs": "^1.1.12",
+		"@radix-ui/react-tooltip": "^1.2.7",
 		"@tailwindcss/vite": "^4.1.5",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
