--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,11 @@
 		"jsx": "react-jsx",
 		"allowImportingTsExtensions": true,
 		"strictNullChecks": true,
-		"strictFunctionTypes": true
+		"strictFunctionTypes": true,
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./packages/app/src/web/*"]
+		}
 	},
 	"exclude": ["node_modules", "**/node_modules/*"]
 }
