--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "hf-mcp",
 	"private": true,
-	"version": "0.0.9",
+	"version": "0.0.13",
 	"type": "module",
 	"packageManager": "pnpm@10.11.0",
 	"scripts": {
@@ -10,6 +10,7 @@
 		"dev:json": "concurrently \"pnpm run --filter=mcp dev\" \"pnpm run --filter=app dev:json\"",
 		"dev:stdio": "concurrently \"pnpm run --filter=mcp dev\" \"pnpm run --filter=app dev:stdio\"",
 		"start": "cd packages/app && pnpm start",
+		"start:json": "cd packages/app && pnpm start:json",
 		"test": "pnpm run -r test",
 		"lint": "pnpm run -r lint",
 		"build": "pnpm -r build",
