--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,14 +1,15 @@
 {
 	"name": "@hf-mcp/app",
-	"version": "0.0.13",
+	"version": "0.0.16",
 	"type": "module",
 	"bin": {
 		"hf-mcp-server": "./dist/server/streamableHttp.js"
 	},
 	"scripts": {
-		"build": "pnpm run build:server && pnpm run build:web",
+		"build": "pnpm run build:server && pnpm run build:web && pnpm run build:mcp-welcome",
 		"build:server": "tsc -p tsconfig.server.json",
 		"build:web": "vite build",
+		"build:mcp-welcome": "VITE_BUILD_TARGET=mcp-welcome vite build",
 		"dev": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/streamableHttp.js",
 		"dev:stdio": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/stdio.js",
 		"dev:sse": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/sse.js",
@@ -66,6 +67,7 @@
 		"typescript": "*",
 		"typescript-eslint": "^8.32.1",
 		"vite": "^6.3.5",
+		"vite-plugin-singlefile": "^2.2.0",
 		"vitest": "^3.1.3"
 	}
 }
