--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
 		"start:json": "cd packages/app && pnpm start:json",
 		"test": "pnpm run -r test",
 		"lint": "pnpm run -r lint",
+		"lint:check": "pnpm run -r lint:check",
+		"typecheck": "pnpm -r exec tsc --noEmit",
+		"format": "prettier --write .",
+		"format:check": "prettier --check .",
 		"build": "pnpm -r build",
-		"clean": "pnpm run -r clean",
-		"buildrun": "pnpm run clean && pnpm run build && pnpm run test && pnpm run start"
+		"clean": "pnpm run -r clean && rimraf node_modules",
+		"buildrun": "pnpm run clean && pnpm run build && pnpm run test && pnpm run start",
+		"prepublishOnly": "pnpm run build"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.27.0",
@@ -25,6 +30,7 @@
 		"cross-env": "^7.0.3",
 		"eslint-plugin-prettier": "^5.4.0",
 		"globals": "^16.1.0",
+		"prettier": "^3.4.2",
 		"rimraf": "^5.0.10",
 		"typescript": "~5.8.3"
 	}
