--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,8 +2,8 @@ packages:
   - packages/mcp
   - packages/app
 ignoredBuiltDependencies:
-  - "@swc/core"
-  - "@tailwindcss/oxide"
+  - '@swc/core'
+  - '@tailwindcss/oxide'
   - esbuild
 prefer-workspace-packages: true
 shared-workspace-lockfile: true
