--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Build packages
+        run: pnpm build
+
       - name: Run linting
-        run: pnpm lint
+        run: pnpm lint:check
 
       - name: Type check
-        run: pnpm -r exec tsc --noEmit
+        run: pnpm typecheck
 
   test:
     runs-on: ubuntu-latest
