--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -33,11 +33,13 @@
 	},
 	"dependencies": {
 		"@huggingface/hub": "^2.1.0",
+		"turndown": "^7.2.0",
 		"zod": "^3.24.4"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.25.0",
 		"@types/node": "^22.15.18",
+		"@types/turndown": "^5.0.5",
 		"eslint": "^9.25.0",
 		"globals": "^16.0.0",
 		"rimraf": "^6.0.1",
