--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -52,8 +52,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@llmindset/hf-mcp": "workspace:^",
 		"@huggingface/hub": "^2.1.0",
+		"@llmindset/hf-mcp": "workspace:^",
 		"@modelcontextprotocol/sdk": "^1.11.2",
 		"@radix-ui/react-checkbox": "^1.2.3",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -69,6 +69,7 @@
 		"express": "^4.18.3",
 		"lucide-react": "^0.507.0",
 		"pino": "^9.7.0",
+		"pino-abstract-transport": "^2.0.0",
 		"pino-pretty": "^13.0.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
