--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -55,6 +55,7 @@
 		"@huggingface/hub": "^2.1.0",
 		"@llmindset/hf-mcp": "workspace:^",
 		"@modelcontextprotocol/sdk": "^1.11.2",
+		"fast-safe-stringify": "^2.1.1",
 		"@radix-ui/react-checkbox": "^1.2.3",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-label": "^2.1.4",
