--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ hf-mcp-server.code-workspace
 .env.test
 packages/e2e-python/fastagent.secrets.yaml
 packages/e2e-python/fastagent.jsonl
+.env.test-analytics
