analytics mode for stateless transport

--- a/.env.test.example
+++ b/.env.test.example
@@ -17,3 +17,4 @@ LOGGING_BATCH_SIZE=10
 HF_API_TIMEOUT=10000
 
 USER_CONFIG_API=https://huggingface.co/api/settings/mcp
+ANALYTICS_MODE # whether to use sessionid for stateless transport
