--- a/packages/e2e-python/fastagent.secrets.yaml.example
+++ b/packages/e2e-python/fastagent.secrets.yaml.example
@@ -3,7 +3,7 @@ mcp:
   servers:
     test_hf:
       headers:
-        Authorization: TEST_ACCOUNT_HF_TOKEN
+        Authorization: Bearer TEST_ACCOUNT_HF_TOKEN
     test_all_hf:
       headers:
-        Authorization: TEST_ACCOUNT_HF_TOKEN
+        Authorization: Bearer TEST_ACCOUNT_HF_TOKEN
