--- a/packages/e2e-python/pyproject.toml
+++ b/packages/e2e-python/pyproject.toml
@@ -6,7 +6,8 @@ requires-python = ">=3.13"
 dependencies = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
-    "fast-agent-mcp>=0.2.49"
+    "fast-agent-mcp>=0.2.50",
+    "huggingface_hub>=0.34.0"
 ]
 
 
