--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -34,7 +34,7 @@
 		"build": "pnpm run build:server && pnpm run build:web && pnpm run build:mcp-welcome",
 		"build:server": "tsc -p tsconfig.server.json",
 		"build:web": "vite build",
-		"build:mcp-welcome": "VITE_BUILD_TARGET=mcp-welcome vite build",
+		"build:mcp-welcome": "cross-env VITE_BUILD_TARGET=mcp-welcome vite build",
 		"dev": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/streamableHttp.js",
 		"dev:stdio": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/stdio.js",
 		"dev:sse": "pnpm run build:server && cross-env NODE_ENV=development node dist/server/sse.js",
