--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ hf-mcp-server.code-workspace
 packages/e2e-python/fastagent.secrets.yaml
 packages/e2e-python/fastagent.jsonl
 .env.test-analytics
+packages/e2e-python/qwen-test/fastagent.secrets.yaml
