add CORS configuration options

--- a/.env.test.example
+++ b/.env.test.example
@@ -18,3 +18,4 @@ HF_API_TIMEOUT=10000
 
 USER_CONFIG_API=https://huggingface.co/api/settings/mcp
 ANALYTICS_MODE # whether to use sessionid for stateless transport
+CORS_ALLOWED_ORIGINS=https://inspector.use-mcp.dev
