--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -56,7 +56,6 @@
 		"@huggingface/hub": "^2.1.0",
 		"@llmindset/hf-mcp": "workspace:^",
 		"@modelcontextprotocol/sdk": "^1.11.2",
-		"fast-safe-stringify": "^2.1.1",
 		"@radix-ui/react-checkbox": "^1.2.3",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-label": "^2.1.4",
@@ -68,7 +67,9 @@
 		"@tanstack/react-table": "^8.21.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cors": "^2.8.5",
 		"express": "^4.18.3",
+		"fast-safe-stringify": "^2.1.1",
 		"lucide-react": "^0.507.0",
 		"pino": "^9.7.0",
 		"pino-abstract-transport": "^2.0.0",
@@ -82,6 +83,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.25.0",
+		"@types/cors": "^2.8.19",
 		"@types/express": "^4.17.21",
 		"@types/node": "^22.15.12",
 		"@types/react": "^19.1.2",
