add use_space tool

--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -33,6 +33,7 @@
 	},
 	"dependencies": {
 		"@huggingface/hub": "^2.1.0",
+		"@mcp-ui/server": "^5.10.0",
 		"turndown": "^7.2.0",
 		"zod": "^3.24.4"
 	},
