--- a/packages/e2e-python/fastagent.config.yaml
+++ b/packages/e2e-python/fastagent.config.yaml
@@ -12,6 +12,11 @@
 
 default_model: slow
 
+mcp_timeline:
+  steps: 30         # number of timeline buckets to render
+  step_seconds: 2  # seconds per bucket (accepts values like "45s", "2m")
+
+
 # Logging and Console Configuration:
 logger:
   # level: "debug" | "info" | "warning" | "error"
@@ -27,6 +32,8 @@ logger:
   show_tools: true
   # Truncate long tool responses on the console
   truncate_tools: true
+  
+
 
 # MCP Servers
 mcp:
